added links to socials in the About Me page

--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About Us - Math Typing Software</title>
+    <title>About Me</title>
     <link rel="stylesheet" href="assets/css/styles.css">
 </head>
 <body>
@@ -24,6 +24,28 @@
         <section id="about">
             <h2>My Mission</h2>
             <p>We aim to provide an easy-to-use platform for creating and editing mathematical equations.</p>
+            
+            <div class="social-links">
+                <h3>Follow Me</h3>
+                <div class="social-buttons">
+                    <a href="https://github.com/allhailkingcpm" class="social-button">
+                        <img src="assets/icons/github.png" alt="GitHub">
+                        GitHub
+                    </a>
+                    <a href="https://bsky.app/profile/allhailkingcpm.bsky.social" class="social-button">
+                        <img src="assets/icons/bluesky.png" alt="Bluesky">
+                        Bluesky
+                    </a>
+                    <a href="https://twitter.com/allhailkingcpm" class="social-button">
+                        <img src="assets/icons/twitter.png" alt="Twitter">
+                        Twitter
+                    </a>
+                    <a href="https://www.instagram.com/allhailkingcpm" class="social-button">
+                        <img src="assets/icons/instagram.png" alt="Instagram">
+                        Instagram
+                    </a>
+                </div>
+            </div>
         </section>
     </main>
     <footer>
